Fixed hero section alignment

--- a/style.css
+++ b/style.css
@@ -22,32 +22,45 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden; 
 }
 
-.main-container {
+/* .container{
   width: 100%;
-  height: 100%;
+  max-width: 1440px;
+} */
+
+.main-container {
+  width: 100vw;
+  height: 100vh;
 }
 /* Navbar start */
 .outer-nav {
-  margin: 30px 40px;
+
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   position: fixed;
   top: 30px;
   gap: 30px;
   z-index: 100;
+  
+  /* background-color: red; */
+  width: 100%;
+  
+  
 }
 
 .navbar {
   background-color: white;
-  width: 1225px;
+   width: 100%;
+  max-width: 1225px; 
   height: 73px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 9px;
-  padding: 30px 40px;
+  /* padding: 30px 40px; */
+   padding: 15px 20px;
 }
 
 .navbar ul {
@@ -86,13 +99,15 @@ body {
 }
 
 
-/* Hero-section  start */
+/* Hero-section */
+
 .hero-section {
-  width: 1440px;
+  width: 100%;
   height: 504px;
   background: linear-gradient(to right, #3c2063, #221238);
   overflow: hidden;
   position: relative;
+  
 }
 
 .bg-images {
@@ -100,6 +115,7 @@ body {
   height: 100%;
   z-index: --99;
   overflow: hidden;
+  
 }
 
 .left-image {
@@ -119,7 +135,7 @@ body {
   z-index: 99;
   position: absolute;
   top: 40%;
-  left: 20%;
+  left: 23%;
   transform: translate(-50% -50%);
 }
 
